# timecodes-generator

./: pyproject.toml
chapter_generator/cli/: main.py
chapter_generator/core/: load.py
timecodes_generator/cli/: main.py
timecodes_generator/core/: export.py  generate_timecodes.py  load.py  test_generate_timecodes.py
timecodes_generator/core/generate_timecodes/: __init__.py  generate_timecodes.py  test_generate_timecodes.py
timecodes_generator/core/utils/: errors.py  regex.py
timecodes_generator/core/utils/datetime_formatting/: __init__.py  datetime_formatting.py  test_datetime_formatting.py
